--- a/about.html
+++ b/about.html
@@ -117,7 +117,7 @@
 
 
     <!-- // _START >> SECTION: MISSION & VISION << SHB // -->
-    <section class="shb-section-vision shb-gradient-left">
+    <section class="shb-section-vision shb-gradient-right">
 
       <div class="container">
         <div class="shb-section-header-wrapper shb-section-vision-header">
@@ -158,6 +158,43 @@
     </section>
     <!-- // _CLOSE >> SECTION: MISSION & VISION << SHB // -->
 
+    <!-- // _START >> SECTION: MISSION & VISION RTL << SHB // -->
+    <section class="shb-section-vision shb-section-vision-rtl shb-gradient-left pt-0">
+
+      <div class="container">
+
+        <div class="shb-section-vision-row vision-reverse mt-0">
+
+          <div class="shb-section-vision-cover">
+            <div class="shb-section-vision-cover-gradient flex-center">
+              <div class="shb-section-vision-cover-placeholder flex-center contain-image">
+                <img src="./assets/images/cover/SHB_MISSION_MAN.png" alt="mission-man">
+              </div>
+              <div class="shb-section-vision-stamp flex-center contain-image aspect-1x1">
+                <img src="./assets/images/cover/SHB_MISSION_STAMP.png" alt="mission-&-vision-stamp">
+              </div>
+            </div>
+          </div>
+
+          <div class="shb-section-vision-content">
+            <div class="shb-section-header-wrapper shb-section-vision-content-header">
+              <h2 class="shb-section-heading-title">Global Leader In Next-Gen
+                Digital Transformation Services</h2>
+              <p class="shb-section-heading-data ellipsis ellipsis-line-four">“We simply aim to help businesses get
+                ahead of challenges & discover better growth opportunities with our wide range of
+                transformation service. We are committed to deliver. We simply aim to help businesses"</p>
+              <div class="shb-section-vision-creative-arrow-handler">
+                <a class="btn-primary btn-length-200 isHoverShineLight" href="javascript:void()">Read more</a>
+              </div>
+            </div>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+    <!-- // _CLOSE >> SECTION: MISSION & VISION RTL << SHB // -->
+
 
     <!-- // _START >> SECTION: SUCCESS REASON << SHB // -->
     <section class="shb-section-success-reason shb-gradient-left shb-gradient-right">
@@ -182,7 +219,7 @@
                     </div>
                     <div>
                       <div class="shb-section-success-tab-slogan text-gradient-theme">We Help You</div>
-                      <div class="text-heading-5 shb-section-success-tab-title">Go <br /> Live, Sooner </div>
+                      <div class="text-heading-5 shb-section-success-tab-title">Go Live, Sooner </div>
                     </div>
                   </div>
                 </div>
@@ -236,7 +273,7 @@
               <div id="firstTab" class="shb-tabs-content">
                 <div class="shb-section-success-reason-content">
                   <div class="shb-section-header-wrapper shb-section-success-reason-content-header">
-                    <span class="shb-section-header-small-title text-gradient-theme">Our Promise</span>
+                    <span class="shb-section-header-small-title text-heading-5 text-gradient-theme">Our Promise</span>
                     <h2 class="shb-section-heading-title">Go. Live Sooner</h2>
                     <p class="shb-section-heading-data">Not just your time, but we value your
                       money too. Leverage our automated process
@@ -250,7 +287,7 @@
 
               <div id="secondTab" class="shb-tabs-content">
                 <div class="shb-section-header-wrapper shb-section-success-reason-content-header">
-                  <span class="shb-section-header-small-title text-gradient-theme">Our Promise</span>
+                  <span class="shb-section-header-small-title text-heading-5 text-gradient-theme">Our Promise</span>
                   <h2 class="shb-section-heading-title">Stay In Budget, Always</h2>
                   <p class="shb-section-heading-data">Not just your time, but we value your
                     money too. Leverage our automated process
@@ -263,7 +300,7 @@
 
               <div id="thirdTab" class="shb-tabs-content">
                 <div class="shb-section-header-wrapper shb-section-success-reason-content-header">
-                  <span class="shb-section-header-small-title text-gradient-theme">Our Promise</span>
+                  <span class="shb-section-header-small-title text-heading-5 text-gradient-theme">Our Promise</span>
                   <h2 class="shb-section-heading-title">Stay In Budget, Always</h2>
                   <p class="shb-section-heading-data">Not just your time, but we value your
                     money too. Leverage our automated process
@@ -276,7 +313,7 @@
 
               <div id="fourthTab" class="shb-tabs-content">
                 <div class="shb-section-header-wrapper shb-section-success-reason-content-header">
-                  <span class="shb-section-header-small-title text-gradient-theme">Our Promise</span>
+                  <span class="shb-section-header-small-title text-heading-5 text-gradient-theme">Our Promise</span>
                   <h2 class="shb-section-heading-title">Today, Tomorrow & Forever</h2>
                   <p class="shb-section-heading-data">Not just your time, but we value your
                     money too. Leverage our automated process
@@ -306,7 +343,7 @@
 
           <div class="shb-section-contact-content">
             <div class="shb-section-header-wrapper shb-section-contact-content-header">
-              <span class="shb-section-header-small-title text-gradient-theme">Contact Us</span>
+              <span class="shb-section-header-small-title text-heading-3 text-gradient-theme">Contact Us</span>
               <h2 class="shb-section-heading-title">Ready To Head-Start Your Transformation Journey?</h2>
               <p class="shb-section-heading-data">We help businesses get from where they are, to where they need to be.
               </p>
@@ -384,7 +421,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-large">
-          <h6 class="shb-footer-header">Contact Us</h6>
+          <h4 class="shb-footer-header">Contact Us</h4>
           <ul class="shb-footer-nav-link-list shb-footer-contact-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="tel:+911234567890">
@@ -415,7 +452,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Useful Links</h6>
+          <h4 class="shb-footer-header">Useful Links</h4>
           <ul class="shb-footer-nav-link-list">
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="index.html">Home</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="about.html">About Us</a>
@@ -428,7 +465,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Social Media</h6>
+          <h4 class="shb-footer-header">Social Media</h4>
           <ul class="shb-footer-nav-link-list shb-footer-social-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="https://www.google.com/">
