--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- // PAGE TITLE << SHB // -->
-  <title>Home | Accorest</title>
+  <title>Portfolio | Accorest</title>
 
   <!-- // _START >> REQUIRED METADATA << SHB // -->
   <meta charset="UTF-8">
@@ -19,9 +19,9 @@
   <!-- // _CLOSE >> REQUIRED METADATA << SHB // -->
 
   <!-- // _START >> REQUIRED ICONS LINKS << SHB // -->
-  <link rel="icon" href="assets/images/portfolio/favicon.ico">
-  <link rel="shortcut icon" href="assets/images/portfolio/favicon.ico">
-  <link rel="apple-touch-icon" href="assets/images/portfolio/favicon.ico">
+  <link rel="icon" href="assets/images/favicon.ico">
+  <link rel="shortcut icon" href="assets/images/favicon.ico">
+  <link rel="apple-touch-icon" href="assets/images/favicon.ico">
   <!-- // _CLOSE >> REQUIRED ICONS LINKS << SHB // -->
 
   <!-- // _START >> REQUIRED STYLESHEETS << SHB // -->
@@ -34,7 +34,7 @@
 <body>
 
   <!-- // _START >> HEADER << SHB // -->
-  <header class="shb-header ground-color-black ">
+  <header class="shb-header ground-color-black">
     <div class="container">
       <nav class="shb-header-body">
 
@@ -82,6 +82,7 @@
     </div>
   </header>
   <!-- // _CLOSE >> HEADER << SHB // -->
+
 
   <section class="shb-expandable-slider-wrapper">
 
@@ -181,7 +182,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-large">
-          <h6 class="shb-footer-header">Contact Us</h6>
+          <h4 class="shb-footer-header">Contact Us</h4>
           <ul class="shb-footer-nav-link-list shb-footer-contact-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="tel:+911234567890">
@@ -212,7 +213,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Useful Links</h6>
+          <h4 class="shb-footer-header">Useful Links</h4>
           <ul class="shb-footer-nav-link-list">
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="index.html">Home</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="about.html">About Us</a>
@@ -225,7 +226,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Social Media</h6>
+          <h4 class="shb-footer-header">Social Media</h4>
           <ul class="shb-footer-nav-link-list shb-footer-social-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="https://www.google.com/">
