--- a/services.html
+++ b/services.html
@@ -126,7 +126,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_ESTATE.svg" alt=INDUSTRY-ESTATE" />
                   </div>
-                  <div class="shb-industry-service-text">Real-Estate</div>
+                  <h5 class="shb-industry-service-text">Real-Estate</h5>
                 </div>
               </div>
 
@@ -135,7 +135,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_TRANSPORT.svg" alt=INDUSTRY-TRANSPORT" />
                   </div>
-                  <div class="shb-industry-service-text">Transportation</div>
+                  <h5 class="shb-industry-service-text">Transportation</h5>
                 </div>
               </div>
 
@@ -144,7 +144,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_LIFESTYLE.svg" alt=INDUSTRY-LIFESTYLE" />
                   </div>
-                  <div class="shb-industry-service-text">Lifestyle</div>
+                  <h5 class="shb-industry-service-text">Lifestyle</h5>
                 </div>
               </div>
 
@@ -157,7 +157,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_EDUCATION.svg" alt=INDUSTRY-EDUCATION" />
                   </div>
-                  <div class="shb-industry-service-text">Manufacturing</div>
+                  <h5 class="shb-industry-service-text">Manufacturing</h5>
                 </div>
               </div>
 
@@ -166,7 +166,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_NETWORK_SOCIAL.svg" alt=INDUSTRY-NETWORK-SOCIAL" />
                   </div>
-                  <div class="shb-industry-service-text"> Social Network</div>
+                  <h5 class="shb-industry-service-text"> Social Network</h5>
                 </div>
               </div>
 
@@ -175,7 +175,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_BANKING.svg" alt=INDUSTRY-BANKING" />
                   </div>
-                  <div class="shb-industry-service-text">Banking</div>
+                  <h5 class="shb-industry-service-text">Banking</h5>
                 </div>
               </div>
 
@@ -188,7 +188,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_HEALTHCARE.svg" alt=INDUSTRY-HEALTHCARE" />
                   </div>
-                  <div class="shb-industry-service-text">Healthcare</div>
+                  <h5 class="shb-industry-service-text">Healthcare</h5>
                 </div>
               </div>
 
@@ -197,7 +197,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_EDUCATION.svg" alt=INDUSTRY-EDUCATION" />
                   </div>
-                  <div class="shb-industry-service-text">Education</div>
+                  <h5 class="shb-industry-service-text">Education</h5>
                 </div>
               </div>
 
@@ -207,7 +207,7 @@
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_AD_DIGITAL.svg"
                       alt=INDUSTRY-ADVERTISEMENT-DIGITAL" />
                   </div>
-                  <div class="shb-industry-service-text">Digital Advertising</div>
+                  <h5 class="shb-industry-service-text">Digital Advertising</h5>
                 </div>
               </div>
 
@@ -221,7 +221,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_SPORTS_N_FITNESS.svg" alt=INDUSTRY-SPORTS" />
                   </div>
-                  <div class="shb-industry-service-text">Sports and Fitness</div>
+                  <h5 class="shb-industry-service-text">Sports and Fitness</h5>
                 </div>
               </div>
 
@@ -230,7 +230,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_ENTERTAINMENTS.svg" alt=INDUSTRY-ENTERTAINMENTS" />
                   </div>
-                  <div class="shb-industry-service-text">Entertainment</div>
+                  <h5 class="shb-industry-service-text">Entertainment</h5>
                 </div>
               </div>
 
@@ -239,7 +239,7 @@
                   <div class="shb-industry-service-icon flex-center contain-image">
                     <img src="assets/images/icons/SHB_ICON_INDUSTRY_TRAVEL_N_BOOKING.svg" alt=INDUSTRY-TRAVEL" />
                   </div>
-                  <div class="shb-industry-service-text">Travel and Booking</div>
+                  <h5 class="shb-industry-service-text">Travel and Booking</h5>
                 </div>
               </div>
 
@@ -684,7 +684,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-large">
-          <h6 class="shb-footer-header">Contact Us</h6>
+          <h4 class="shb-footer-header">Contact Us</h4>
           <ul class="shb-footer-nav-link-list shb-footer-contact-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="tel:+911234567890">
@@ -715,7 +715,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Useful Links</h6>
+          <h4 class="shb-footer-header">Useful Links</h4>
           <ul class="shb-footer-nav-link-list">
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="index.html">Home</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="about.html">About Us</a>
@@ -728,7 +728,7 @@
         </div>
 
         <div class="shb-footer-col shb-footer-col-small">
-          <h6 class="shb-footer-header">Social Media</h6>
+          <h4 class="shb-footer-header">Social Media</h4>
           <ul class="shb-footer-nav-link-list shb-footer-social-links-list">
             <li class="shb-footer-nav-link-item">
               <a class="shb-footer-nav-link" target="_blank" href="https://www.google.com/">
