--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <!-- // _START >> NAVBAR LOGO & NAVBAR MENU << SHB //  -->
         <div class="shb-header-start">
           <div class="shb-header-logo contain-image flex-center">
-            <img src="./assets/images/logos/SHB_BRAND_LOGO.svg" class="header-logo-image" alt="brand-logo" />
+            <a href="index.html" class="line-height-0"><img src="./assets/images/logos/SHB_BRAND_LOGO.svg" class="header-logo-image" alt="brand-logo" /></a>
           </div>
         </div>
         <!-- // _CLOSE >> NAVBAR LOGO & NAVBAR MENU << SHB //  -->
