--- a/about.html
+++ b/about.html
@@ -58,7 +58,7 @@
               <a class="shb-header-nav-link" href="services.html">Service</a>
             </li>
             <li class="shb-header-nav-list-items">
-              <a class="shb-header-nav-link" href="javascript:void(0)">Blog</a>
+              <a class="shb-header-nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <a class="btn-primary isHoverShineLight shb-mobile-contact-btn" href="javascript:void(0)">Contact Us</a>
           </ul>
@@ -202,7 +202,7 @@
       <div class="container">
         <div class="shb-section-header-wrapper shb-section-success-header">
           <h2 class="shb-section-heading-title">Success Partners For Some Really Good Reasons…</h2>
-          <p class="shb-section-heading-data">When you choose Code Brew as your partner, you have a
+          <p class="shb-section-heading-data">When you choose Code Accorest as your partner, you have a
             dedicated team behind that truly cares about your unique ideas.</p>
         </div>
 
@@ -353,7 +353,7 @@
 
           <div class="shb-section-contact-form-gradient">
             <div class="shb-section-contact-form-cover">
-              <h3>Let's Brew Success For Your Buniness!</h3>
+              <h3>Let's Accorest Success For Your Buniness!</h3>
 
               <form class="shb-section-contact-form" action="" method="">
 
@@ -459,7 +459,6 @@
             </li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="services.html">Service</a>
             </li>
-            <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="javascript:void()">Blog</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="portfolio.html">Portfolio</a></li>
           </ul>
         </div>
