--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
               <a class="shb-header-nav-link" href="services.html">Service</a>
             </li>
             <li class="shb-header-nav-list-items">
-              <a class="shb-header-nav-link" href="javascript:void(0)">Blog</a>
+              <a class="shb-header-nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <a class="btn-primary isHoverShineLight shb-mobile-contact-btn" href="javascript:void(0)">Contact Us</a>
           </ul>
@@ -100,62 +100,92 @@
           <div class="shb-expandable-item-row">
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 0</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 1</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 2</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 3</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 0</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 4</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 5</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_02.jpg" alt="SHB_PORTFOLIO_02">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 6</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_03.jpg" alt="SHB_PORTFOLIO_03">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 7</h4>
+                </div>
               </div>
             </div>
 
             <div class="shb-expandable-card-item flex-center">
-              <div class="shb-expandable-card-image flex-center cover-image">
+              <div class="shb-expandable-card-image position-relative flex-center cover-image">
                 <img src="./assets/images/portfolio/SHB_PORTFOLIO_01.jpeg" alt="SHB_PORTFOLIO_01">
+                <div class="shb-project-title-wrap">
+                  <h4>Project 8</h4>
+                </div>
               </div>
             </div>
 
@@ -220,7 +250,6 @@
             </li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="services.html">Service</a>
             </li>
-            <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="javascript:void()">Blog</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="portfolio.html">Portfolio</a></li>
           </ul>
         </div>
