--- a/services.html
+++ b/services.html
@@ -58,7 +58,7 @@
               <a class="shb-header-nav-link" href="services.html">Service</a>
             </li>
             <li class="shb-header-nav-list-items">
-              <a class="shb-header-nav-link" href="javascript:void(0)">Blog</a>
+              <a class="shb-header-nav-link" href="portfolio.html">Portfolio</a>
             </li>
             <a class="btn-primary isHoverShineLight shb-mobile-contact-btn" href="javascript:void(0)">Contact Us</a>
           </ul>
@@ -386,7 +386,7 @@
       <div class="container">
 
         <div class="shb-section-header-wrapper shb-section-developing-header">
-          <h2 class="shb-section-heading-title">Dynamic Brewing Process of Developing a Mobile App</h2>
+          <h2 class="shb-section-heading-title">Dynamic Accorest Process of Developing a Mobile App</h2>
           <p class="shb-section-heading-data">Grow your business with the most flexible and agile work process
           </p>
         </div>
@@ -398,6 +398,7 @@
                 <div class="shb-section-developing-process-step-ground flex-center">
                   <i data-icon="SHB_ICON_APP_DEV_PLANNING" class="flex-center contain-image"></i>
                 </div>
+                <h4 class="text-color-black">Planning</h4>
               </div>
               <div class="shb-section-developing-process-step-button bottom">
                 <div class="shb-section-developing-process-step-ground flex-center">
@@ -722,7 +723,6 @@
             </li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="services.html">Service</a>
             </li>
-            <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="javascript:void()">Blog</a></li>
             <li class="shb-footer-nav-link-item"><a class="shb-footer-nav-link" href="portfolio.html">Portfolio</a></li>
           </ul>
         </div>
