--- a/index.html
+++ b/index.html
@@ -855,13 +855,25 @@
   <div id="myModal" class="modal">
     <div class="modal-content">
       <span class="close">&times;</span>
-      <img src="./assets/images/background-covers/tcup.webp" class="auth-tcup" alt="" />
+      <!-- <img src="./assets/images/background-covers/tcup.webp" class="auth-tcup" alt="" /> -->
       <div class="form-wrap">
-        <div class="">
-          <h4 class="text-center">Let's Brew Success For
-            <br/><span class="text-color-black">Your Business!</span></h4>
-            <form class="shb-section-contact-form" action="" method="">
-              <div class="form-data-wrap vertical-scroll">
+        <div class="shb-section-contact-row">
+          <div class="shb-section-contact-content">
+            <div class="shb-section-header-wrapper shb-section-contact-content-header">
+              <span class="shb-section-header-small-title text-heading-3 text-gradient-theme">Contact Us</span>
+              <h2 class="shb-section-heading-title">Ready To Head-Start Your Transformation Journey?</h2>
+              <p class="shb-section-heading-data">We help businesses get from where they are, to where they need to be.
+              </p>
+              <a class="btn-primary btn-length-200 isHoverShineLight" href="javascript:void()">Let’s Connect</a>
+            </div>
+          </div>
+
+          <div class="shb-section-contact-form-gradient">
+            <div class="shb-section-contact-form-cover">
+              <h3>Let's Accorest Success For Your Buniness!</h3>
+
+              <form class="shb-section-contact-form" action="" method="">
+
                 <div class="shb-section-contact-form-column">
                   <div class="shb-section-contact-form-form-control">
                     <i data-icon="SHB_ICON_CN_USER" class="shb-section-contact-icon flex-center contain-image"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -873,7 +885,7 @@
                   </div>
                   <p class="shb-section-contact-form-error-message">This Field is Required</p>
                 </div>
-  
+
                 <div class="shb-section-contact-form-column">
                   <div class="shb-section-contact-form-form-control">
                     <i data-icon="SHB_ICON_CN_MAIL" class="shb-section-contact-icon flex-center contain-image"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -884,7 +896,7 @@
                   </div>
                   <p class="shb-section-contact-form-error-message">Email is not valid</p>
                 </div>
-  
+
                 <div class="shb-section-contact-form-column">
                   <div class="shb-section-contact-form-form-control">
                     <i data-icon="SHB_ICON_CN_CALL" class="shb-section-contact-icon flex-center contain-image"><svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -895,7 +907,7 @@
                   </div>
                   <p class="shb-section-contact-form-error-message">Use only Numbers.</p>
                 </div>
-  
+
                 <div class="shb-section-contact-form-column">
                   <div class="shb-section-contact-form-form-control">
                     <i class="shb-section-contact-icon flex-center contain-image"></i>
@@ -903,11 +915,13 @@
                   </div>
                   <p class="shb-section-contact-form-error-message">Just Display Errors</p>
                 </div>
-              </div>
 
-              <button type="submit" class="btn-primary btn-length-200 isHoverShineLight">Let’s Connect</button>
+                <button type="submit" class="btn-primary btn-length-200 isHoverShineLight">Let’s Connect</button>
 
-            </form>
+              </form>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
