--- a/services.html
+++ b/services.html
@@ -386,7 +386,7 @@
       <div class="container">
 
         <div class="shb-section-header-wrapper shb-section-developing-header">
-          <h2 class="shb-section-heading-title">Dynamic Accorest Process of Developing a Mobile App</h2>
+          <h2 class="shb-section-heading-title">Dynamic Accorest Process of Developing a Software</h2>
           <p class="shb-section-heading-data">Grow your business with the most flexible and agile work process
           </p>
         </div>
@@ -404,21 +404,25 @@
                 <div class="shb-section-developing-process-step-ground flex-center">
                   <i data-icon="SHB_ICON_APP_DEV_PEN" class="flex-center contain-image"></i>
                 </div>
+                <h4 class="text-color-black">Web Development</h4>
               </div>
               <div class="shb-section-developing-process-step-button top">
                 <div class="shb-section-developing-process-step-ground flex-center">
                   <i data-icon="SHB_ICON_APP_DEV_DEVELOPMENT" class="flex-center contain-image"></i>
                 </div>
+                <h4 class="text-color-black">UI/UX</h4>
               </div>
               <div class="shb-section-developing-process-step-button bottom">
                 <div class="shb-section-developing-process-step-ground flex-center">
                   <i data-icon="SHB_ICON_APP_DEV_TESTING" class="flex-center contain-image"></i>
                 </div>
+                <h4 class="text-color-black">App Developing</h4>
               </div>
               <div class="shb-section-developing-process-step-button">
                 <div class="shb-section-developing-process-step-ground flex-center">
                   <i data-icon="SHB_ICON_APP_DEV_MAINTENANCE" class="flex-center contain-image"></i>
                 </div>
+                <h4 class="text-color-black">Testing</h4>
               </div>
             </div>
           </div>
